--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "biome": "biome check --write --config-path=./biome.json ."
   },
   "dependencies": {
     "react": "19.0.0-rc-02c0e824-20241028",
@@ -14,11 +14,12 @@
     "next": "15.0.2"
   },
   "devDependencies": {
-    "typescript": "5.6.3",
+    "@biomejs/biome": "1.9.4",
     "@types/node": "22.8.6",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
     "postcss": "8.4.47",
-    "tailwindcss": "3.4.14"
+    "tailwindcss": "3.4.14",
+    "typescript": "5.6.3"
   }
 }
