--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "biome": "biome check --write --config-path=./biome.json ."
   },
   "dependencies": {
+    "geist": "1.3.1",
+    "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "next": "15.0.2"
+    "react-dom": "19.0.0-rc-02c0e824-20241028"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
