--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "biome": "biome check --write --config-path=./biome.json ."
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "2.1.2",
+    "@radix-ui/react-icons": "1.3.1",
+    "@radix-ui/react-slot": "1.1.0",
+    "class-variance-authority": "0.7.0",
     "geist": "1.3.1",
     "next": "15.0.2",
+    "next-themes": "0.3.0",
     "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028"
+    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "tailwind-merge": "2.5.4",
+    "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
